--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
     <div class="hero">
       <img src="./assets/hero.jpg" alt="Hero Image" />
     </div>
+    
+    <article>
+      <p class="article-p">Siraphob Reanmanorom</p>
+    </article>
 
     <!-- Main Section with Cards -->
-    <div class="main">
+    <div class="main">      
       <div class="aside">
         <h1>This is sidebar</h1>
         <img src="./assets/sidebar.jpg" alt="Card 1 Image" />
